--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,3 +17,18 @@ canvas {
     height: 100%;
     display: block;
 }
+
+/* 과녁점 */
+.crosshair {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 15px;
+    height: 15px;
+    background-color: transparent;
+    border: 2px solid black; /* 과녁점 모양을 설정 */
+    border-radius: 50%;
+    z-index: 10;
+    pointer-events: none; /* 클릭 불가능하게 설정 */
+}
